--- a/source/dialogs/formation-resistivity/formation-resistivity-modal.html
+++ b/source/dialogs/formation-resistivity/formation-resistivity-modal.html
@@ -130,8 +130,8 @@
                 <button type="button" ng-click="wiModal.onApplyButtonClicked();" class="btn btn-default">
                     <span class="apply-16x16"></span>&nbsp;Apply
                 </button>
-                <button type="button" ng-click="wiModal.onOKButtonClicked();" class="btn btn-default">
-                    <span class="ok-16x16"></span>&nbsp;Ok
+                <button type="button" ng-click="wiModal.onRunButtonClicked();" class="btn btn-default">
+                    <span class="run-16x16"></span>&nbsp;Run
                 </button>
                 <button type="button" ng-click="wiModal.onCancelButtonClicked();" class="btn btn-default">
                     <span class="close-16x16"></span>&nbsp;Close
