group wells basic

--- a/source/dialogs/group-manager/group-manager-modal.html
+++ b/source/dialogs/group-manager/group-manager-modal.html
@@ -7,8 +7,12 @@
             </div>
             <div class="modal-body">
                 <div class="row">
-                    <button class="btn btn-default"><span class="plus-16x16"></span>&nbsp;Add</button>
-                    <button class="btn btn-default"><span class="close-16x16-edit"></span>&nbsp;Remove</button>
+                    <button class="btn btn-default" ng-click="wiModal.onAddButtonClicked()"><span class="plus-16x16"></span>&nbsp;Add</button>
+                    <button class="btn btn-default" ng-click="wiModal.onRemoveButtonClicked()"><span class="close-16x16-edit"></span>&nbsp;Remove</button>
+                </div>
+                <div class="row">
+                    <wi-treeview name="groupManagerTreeView" config="wiModal.treeConfig"
+                        container="wiModal" on-click="wiModal.onSelectGroup"></wi-treeview>
                 </div>
             </div>
             <div class="modal-footer">
